[metadata]
long_description = file: README.md
license = MIT
license_file = LICENSE

[aliases]
test = pytest

[flake8]
exclude =
    .git,
    .eggs,
    __pycache__,
    docs/,
    tests/,
    src/spines/_version.py,
    src/spines/vendor/,
    dist/,
    setup.py
ignore =
    # Defaults:
    E121,E123,E126,E226,E24,E704,W503,W504,
    # Additions:
    # E402: module level import not at top of file
    E402

[mypy]
ignore_missing_imports=true
follow_imports=skip
html_report=mypyhtml
python_version=3.7
mypy_path=typeshed/pyi:typeshed/imports

[versioneer]
VCS = git
style = pep440
versionfile_source = src/spines/_version.py
versionfile_build = spines/_version.py
tag_prefix = v
parentdir_prefix = spines-
