[metadata]
description = Skeletons for parameterized models.
author = Douglas Daly
author_email = contact@douglasdaly.com
url = https://www.github.com/douglasdaly/spines
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords =
    skeleton
    parameter
    model
    data
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[flake8]
exclude =
    .git,
    .eggs,
    __pycache__,
    docs/,
    tests/,
    src/spines/_vendored/,
    dist/,
    setup.py
ignore =
    # Defaults:
    E121,E123,E126,E226,E24,E704,W503,W504,
    # Additions:
    # E402: module level import not at top of file
    E402

[mypy]
ignore_missing_imports = true
follow_imports = skip
html_report = mypyhtml
python_version = 3.7
mypy_path = typeshed/pyi:typeshed/imports
